# ymhub

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: gen_rc.cmake
docs/: css-guide.html  index.html
integrations/fatality/: ymhub_sync.lua
src/app/: CMakeLists.txt  icon.rc  main.cpp
src/dll/: CMakeLists.txt  dllmain.cpp
src/shared/: ipc.h  version.h
